#235: Updated OpenAPI specs
